Clone of SATF Master 20230630_1244

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-git+https://ElBloqueReadOnly:qgqvrjLgcLTbvmN6BR5C@bitbucket.org/nf_py_g6_team/nf_common.git@string_splitter_by_separators
+git+https://ElBloqueReadOnly:qgqvrjLgcLTbvmN6BR5C@bitbucket.org/nf_py_g6_team/nf_common.git
 pandas
 pyarrow
 openpyxl
